dodanie klas obslugyjacych komentarze
